@@ -52,20 +52,25 @@ public:
    * the file is binary or not.
    */
   bool Load (FileStream &rstrIn);
+  bool Load (std::istream &rstrIn);
   /** Loads an ASCII STL file. */
   bool LoadAscii (FileStream &rstrIn);
+  bool LoadAscii (std::istream &rstrIn);
   /** Loads a binary STL file. */
   bool LoadBinary (FileStream &rstrIn);
+  bool LoadBinary (std::istream &rstrIn);
 
   /** Saves the mesh object into an ASCII file. */
   bool SaveAscii (FileStream &rstrOut) const;
+  bool SaveAscii (std::ostream &rstrOut) const;
   /** Saves the mesh object into a binary file. */
   bool SaveBinary (FileStream &rstrOut) const;
+  bool SaveBinary (std::ostream &rstrOut) const;
 
 protected:
   MeshKernel &_rclMesh;   /**< reference to mesh data structure */
 };
-
+#if 0
 /**
  * The MeshInventor class is able to read or write mesh object in 
  * OpenInventor format.
@@ -84,7 +89,7 @@ public:
 protected:
   MeshKernel &_rclMesh; /**< reference to mesh data structure */
 };
-
+#endif
 /**
  * The MeshInventor class is able to read or write mesh object in 
  * OpenInventor format.
